
 * Regression: reinclude all http exception types in the 'couchdb' package's
   scope.
 * Request retries schedule and frequency are now customizable.
 * Allow more kinds of request errors to trigger a retry.
 * Replaced epydoc API docs by Sphinx-based documentation.
 * Improve wrapping of view results.
 * Removed couchdb-replicate script (replacement for continuous replication).


Version 0.7.0 (Apr 15, 2010)
----------------------------

 * Breaking change: the dependency on `httplib2` has been replaced by
   an internal `couchdb.http` library. This changes the API in several places.
   Most importantly, `resource.request()` now returns a 3-member tuple. 
 * Breaking change: `couchdb.schema` has been renamed to `couchdb.mapping`.
   This better reflects what is actually provided. Classes inside
   `couchdb.mapping` have been similarly renamed (e.g. `Schema` -> `Mapping`).
 * Breaking change: `couchdb.schema.View` has been renamed to
   `couchdb.mapping.ViewField`, in order to help distinguish it from
   `couchdb.client.View`.
 * Breaking change: the `client.Server` properties `version` and `config`
   have become methods in order to improve API consistency.
 * Prevent `schema.ListField` objects from sharing the same default (issue 107).
 * Added a `changes()` method to the `client.Database` class (issue 103).
 * Added an optional argument to the 'Database.compact` method to enable
   view compaction (the rest of issue 37).


Version 0.6.1 (Dec 14, 2009)
----------------------------

 * Compatible with CouchDB 0.9.x and 0.10.x.
 * Removed debugging statement from `json` module (issue 82).
 * Fixed a few bugs resulting from typos.
 * Added a `replicate()` method to the `client.Server` class (issue 61).
 * Honor the boundary argument in the dump script code (issue 100).
 * Added a `stats()` method to the `client.Server` class.
 * Added a `tasks()` method to the `client.Server` class.
 * Allow slashes in path components passed to the uri function (issue 96).